# SpaceStuff

./: .gitignore  CMakeLists.txt  makefile  readme.md  run
assets/: bodies.json  rings.json
assets/data/: rings.json
include/: tle.hpp
include/data/: db_manager.hpp  horizons.hpp  position.cpp  position.hpp  tle.hpp
include/ecs/: archetype.hpp  components.hpp  ecs.hpp  systems.hpp
include/objects/: barycenter.hpp  grid.hpp  object.hpp  object_cubemap.hpp  object_mesh.hpp  orbit_line.hpp  orbits.hpp  particle.hpp  ring.hpp  skybox.hpp  sphere.hpp
include/render/: mesh.hpp  shader.hpp  stb_image.h
include/render/objects/: grid.hpp  orbit.hpp  orbits.hpp  ring.hpp  skybox.hpp  sphere.hpp
include/scene/: camera.hpp  camera_anchor.hpp  scene.hpp  signal.hpp  time.hpp
src/: CMakeLists.txt  main.cpp
src/data/: db_manager.cpp  position.cpp  tle.hpp
src/ecs/: archetype.cpp  ecs.cpp  systems.cpp
src/ecs/systems/: orbit.cpp  ring.cpp  sphere.cpp  systems.cpp
src/objects/: barycenter.cpp  cube.cpp  cube.hpp  grid.cpp  grid.hpp  object.hpp  object_cubemap.cpp  object_cubemap.hpp  object_faces.cpp  object_faces.hpp  object_mesh.cpp  object_mesh.hpp  object_texture.hpp  orbit_line.cpp  orbit_line.hpp  orbits.cpp  particle.cpp  ring.cpp  skybox.cpp  skybox.hpp  sphere.cpp  sphere.hpp
src/render/: mesh.cpp  shader.cpp
src/render/objects/: grid.cpp  orbit.cpp  orbits.cpp  ring.cpp  skybox.cpp  sphere.cpp
src/scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp  time.cpp
src/shaders/: base.fs  base.vs  fragmentShader.glsl  grid.fs  grid.vs  orbit.fs  orbit.vs  orbit_line.vs  orbits.fs  orbits.vs  ring.fs  ring.vs  shader.hpp  texture.fs  texture.vs  vertexShader.glsl
src/shapes/: cube.cpp  cube.hpp  object.hpp  sphere.cpp  sphere.hpp
tests/: CMakeLists.txt  ecs_tests.cpp
